# python-gridnet

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  test_output.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yaml  labels.yaml  linting.yaml  lock.yaml  release.yaml  stale.yaml  tests.yaml  tweet-release.yaml  typing.yaml
examples/: device.py  smartbridge.py
gridnet/: __init__.py  gridnet.py  models.py
net2grid/: __init__.py  exceptions.py  models.py  net2grid.py
pure_energie/: __init__.py  exceptions.py  models.py  pure_energie.py
src/gridnet/: __init__.py  exceptions.py  gridnet.py  models.py
tests/: __init__.py  conftest.py  test_exceptions.py  test_gridnet.py  test_models.py  test_net2grid.py  test_pem.py
tests/__snapshots__/: test_models.ambr
tests/fixtures/: device.json  smartmeter.json
