[tool.poetry]
name = "gridnet"
version = "0.0.0"
description = "Asynchronous Python client for a NET2GRID devices"
authors = ["Klaas Schoute <hello@student-techlife.com>"]
maintainers = ["Klaas Schoute <hello@student-techlife.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/klaasnicolaas/python-gridnet"
repository = "https://github.com/klaasnicolaas/python-gridnet"
documentation = "https://github.com/klaasnicolaas/python-gridnet"
keywords = ["net2grid", "energy", "device", "power", "async", "client"]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "gridnet" },
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = ">=3.0.0"
yarl = ">=1.6.0"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.5"
black = "^22.3"
blacken-docs = "^1.12.1"
coverage = {version = "^6.3", extras = ["toml"]}
flake8 = "^4.0.1"
flake8-docstrings = "^1.5.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
pre-commit-hooks = "^4.2.0"
pylint = "^2.13.4"
pytest = "^7.1.0"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
yamllint = "^1.26.3"
pyupgrade = "^2.31.1"
flake8-simplify = "^0.19.2"
vulture = "^2.3"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.3.23"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.8.0"
flake8-eradicate = "^1.2.0"
flake8-markdown = "^0.3.0"
darglint = "^1.7.0"
safety = "^1.10.3"
codespell = "^2.1.0"
bandit = "^1.7.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/klaasnicolaas/python-gridnet/issues"
Changelog = "https://github.com/klaasnicolaas/python-gridnet/releases"

[tool.black]
target-version = ['py39']

[tool.coverage.paths]
source = ["gridnet"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
source = ["gridnet"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "too-few-public-methods",
    "duplicate-code",
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=88

[tool.pylint.DESIGN]
max-attributes=20

[tool.pytest.ini_options]
addopts = "--cov"

[tool.vulture]
min_confidence = 80
paths = ["gridnet"]
verbose = true

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
